Ensure readable colour

--- a/static/styles/themes/dark-theme.scss
+++ b/static/styles/themes/dark-theme.scss
@@ -588,6 +588,7 @@ textarea.form-control {
 
     .selected {
         background-color: #21525f !important;
+        color: #dddddd !important;
     }
 
     .optgroup-header {
